--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Emacs:
+### Emacs ###
+# -*- mode: gitignore; -*-
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Python:
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
